--- a/my-hood/Base.lproj/LaunchScreen.storyboard
+++ b/my-hood/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8150" systemVersion="15A204g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8122"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,13 +17,36 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="back" translatesAutoresizingMaskIntoConstraints="NO" id="Deb-BX-vw0">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bannerlogo" translatesAutoresizingMaskIntoConstraints="NO" id="dsA-Yd-xW2">
+                                <rect key="frame" x="180" y="13" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="7S9-wR-33v"/>
+                                    <constraint firstAttribute="width" constant="240" id="dnA-1Q-OU6"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Deb-BX-vw0" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="6bG-M6-OxA"/>
+                            <constraint firstItem="dsA-Yd-xW2" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="topMargin" constant="13" id="FMt-5M-hpN"/>
+                            <constraint firstAttribute="trailing" secondItem="Deb-BX-vw0" secondAttribute="trailing" id="SJs-dT-ep3"/>
+                            <constraint firstItem="Deb-BX-vw0" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="XEd-qj-po4"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="Deb-BX-vw0" secondAttribute="bottom" id="mXl-GO-ThW"/>
+                            <constraint firstItem="dsA-Yd-xW2" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="x6N-f4-DHs"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="325" y="348"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="back" width="640" height="960"/>
+        <image name="bannerlogo" width="518" height="194"/>
+    </resources>
 </document>
